--- a/tasks/common/configure_slim.yml
+++ b/tasks/common/configure_slim.yml
@@ -1,9 +1,8 @@
 ---
 - name: Copy XinitRC config file
-  sudo: yes
   template:
     src: ../../templates/archlinux/xinitrc.j2
-    dest: "/etc/X11/xinit/xinitrc"
+    dest: "{{ lookup('env','HOME') }}/.xinitrc"
     mode: 0644
   tags:
     - archlinux
