fix (xinitrc): Fix login command again..

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,4 +7,4 @@ slim_extra_pkg: true
 slim_themes_pkg: slim-themes
 
 ### Xinitrc configurations
-slim_default_sesion: xfce
+slim_default_sesion_command: startxfce4
