fix (HOME): Use ansible facts to get user HOME dir feat (testing): Moved test from kickass-linux repo to it's own

--- a/tasks/common/configure_slim.yml
+++ b/tasks/common/configure_slim.yml
@@ -2,7 +2,7 @@
 - name: Copy XinitRC config file
   template:
     src: ../../templates/archlinux/xinitrc.j2
-    dest: "{{ lookup('env','HOME') }}/.xinitrc"
+    dest: "{{ ansible_env.HOME }}/.xinitrc"
     mode: 0644
   tags:
     - archlinux
