--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,12 +1,18 @@
 ---
 galaxy_info:
   author: Martin Evgeniev
-  description: An Ansible role for installing kickass Slim Window Manager.
+  description: An Ansible role for installing kickass Slim Login Manager.
   company: Blackcloudz.
   license: TBC
   min_ansible_version: 1.2
   platforms:
   - name: Arch Linux
+    versions:
+    - all
+  - name: Debian/Ubuntu
+    versions:
+    - all
+  - name: CentOS/Fedora/SuSe
     versions:
     - all
   categories:
