--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,6 +3,14 @@
 - name: Install Slim Arch Linux
   include: archlinux/install_slim.yml
 
+### Debian
+- name: Install Slim Debian/Ubuntu
+  include: debian/install_slim.yml
+
+### Redhat
+- name: Install Slim CentOS/Fedora/SuSe
+  include: redhat/install_slim.yml
+
 ### Common
 - name: Configure Common
   include: common/configure_slim.yml
