--- a/tasks/redhat/install_slim.yml
+++ b/tasks/redhat/install_slim.yml
@@ -5,13 +5,4 @@
     name: "{{ slim_base_pkg }}"
     state: present
     update_cache: yes
-  when: ansible_os_family == "CentOS" or ansible_os_family == "Fedora" or ansible_os_family == "SuSe"
-
-- name: Install extra package CentOS/Fedora/SuSe
-  sudo: yes
-  yum:
-    name: "{{ item }}"
-    state: present
-  with_items:
-    - "{{ slim_themes_pkg }}"
-  when: slim_extra_pkg == true and ansible_os_family == "CentOS" or ansible_os_family == "Fedora" or ansible_os_family == "SuSe"
+  when: ansible_os_family == "CentOS" or ansible_os_family == "RedHat" or ansible_os_family == "Fedora" or ansible_os_family == "SuSe"
